[FIX] website_sale: wrap unbreakable product name
In some location, a long unbreakable word would cause following columns
to be hidden (depending on size of unbreakable word, font, font size,
...). For example, this happened in the cart summary on payment page.

With this changeset, if not possible otherwise, line break happen inside
the word.

opw-2451496

note: from 13.0 the shop product lists are inside .card so the h5
override (that is now h6) is not necessary.

note: also adds similar CSS propery for case where word-wrap doesn't
word (added in `odoo/odoo#66194` for 12.0 up to 13.0).

X-original-commit: fbc8c62e45e3349852a43ad6d766e5246d133ef7

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -35,8 +35,10 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
         }
     }
 
-    h1[itemprop="name"], .oe_product_cart form h5 {
+    h1[itemprop="name"], .td-product_name {
+        word-break: break-word;
         word-wrap: break-word;
+        overflow-wrap: break-word;
     }
 
     @include media-breakpoint-down(sm) {
